--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Web Scraping Challenge</h1>\n",
+    "\n",
+    "<h2>Step 1 - Scraping</h2>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,6 +35,340 @@
    "source": [
     "executable_path = {'executable_path': 'chromedriver.exe'}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Nasa Mars News</h3>\n",
+    "\n",
+    "- Scrape the Mars News Site and collect the latest News Title and Paragraph Text. Assign the text to variables that you can reference later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##PAGE TO BE SCRAPED##\n",
+    "news_url = 'https://mars.nasa.gov/news/'\n",
+    "browser.visit(news_url)\n",
+    "html = browser.html\n",
+    "news_soup = bs(html,'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mars Now\n",
+      "----------\n",
+      "The six-wheeled scientist is heading south to explore Jezero Crater’s lakebed in search of signs of ancient microbial life.\n"
+     ]
+    }
+   ],
+   "source": [
+    "##COLLECT THE LATEST NEWS TITLE AND PARAGRAPH TEXT##\n",
+    "news_title = news_soup.find_all('div', class_='content_title')[0].text\n",
+    "news_body = news_soup.find_all('div', class_='article_teaser_body')[0].text\n",
+    "\n",
+    "print(news_title)\n",
+    "print(\"----------\")\n",
+    "print(news_body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>JPL Mars Space Images</h3>\n",
+    "\n",
+    "- Use splinter to navigate the site and find the image url for the current Featured Mars Image and assign the url string to a variable called featured_image_url.\n",
+    "\n",
+    "- Make sure to find the image url to the full size .jpg image.\n",
+    "\n",
+    "- Make sure to save a complete url string for this image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def featured():\n",
+    "    url = \"https://spaceimages-mars.com\"\n",
+    "    browser.visit(url)\n",
+    "    html_img = browser.html\n",
+    "    soup = bs(html_img,\"html.parser\")\n",
+    "    featured_img_url = soup.find('div', class_='header')\n",
+    "    jpg = featured_img_url.find('a', class_=\"showimg fancybox-thumbs\")\n",
+    "    jpg = jpg['href']\n",
+    "    featured_img_url = (f'{url}/{jpg}')\n",
+    "    featured_img_url\n",
+    "    return(featured_img_url)\n",
+    "\n",
+    "featured()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Mars Facts</h3>\n",
+    "\n",
+    "- Visit the Mars Facts webpage here and use Pandas to scrape the table containing facts about the planet including Diameter, Mass, etc.\n",
+    "\n",
+    "- Use Pandas to convert the data to a HTML table string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[                         0                1                2\n",
+       " 0  Mars - Earth Comparison             Mars            Earth\n",
+       " 1                Diameter:         6,779 km        12,742 km\n",
+       " 2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       " 3                   Moons:                2                1\n",
+       " 4       Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       " 5          Length of Year:   687 Earth days      365.24 days\n",
+       " 6             Temperature:     -87 to -5 °C      -88 to 58°C,\n",
+       "                       0                              1\n",
+       " 0  Equatorial Diameter:                       6,792 km\n",
+       " 1       Polar Diameter:                       6,752 km\n",
+       " 2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       " 3                Moons:          2 ( Phobos & Deimos )\n",
+       " 4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       " 5         Orbit Period:           687 days (1.9 years)\n",
+       " 6  Surface Temperature:                   -87 to -5 °C\n",
+       " 7         First Record:              2nd millennium BC\n",
+       " 8          Recorded By:           Egyptian astronomers]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://galaxyfacts-mars.com/'\n",
+    "tables = pd.read_html(url)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Diameter:</td>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Distance from Sun:</td>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Length of Year:</td>\n",
+       "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Mars - Earth Comparison             Mars            Earth\n",
+       "0               Diameter:         6,779 km        12,742 km\n",
+       "1                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "2                  Moons:                2                1\n",
+       "3      Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       "4         Length of Year:   687 Earth days      365.24 days\n",
+       "5            Temperature:     -87 to -5 °C      -88 to 58°C"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_fact = tables[0]\n",
+    "mars_fact.columns = mars_fact.iloc[0]\n",
+    "mars_fact = mars_fact.reindex(mars_fact.index.drop(0)).reset_index(drop=True)\n",
+    "mars_fact.columns.name = None\n",
+    "mars_fact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars - Earth Comparison</th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fact_table = mars_fact.to_html()\n",
+    "fact_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>Mars - Earth Comparison</th>\n",
+      "      <th>Mars</th>\n",
+      "      <th>Earth</th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>0</th>\n",
+      "      <td>Diameter:</td>\n",
+      "      <td>6,779 km</td>\n",
+      "      <td>12,742 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>1</th>\n",
+      "      <td>Mass:</td>\n",
+      "      <td>6.39 × 10^23 kg</td>\n",
+      "      <td>5.97 × 10^24 kg</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>2</th>\n",
+      "      <td>Moons:</td>\n",
+      "      <td>2</td>\n",
+      "      <td>1</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>3</th>\n",
+      "      <td>Distance from Sun:</td>\n",
+      "      <td>227,943,824 km</td>\n",
+      "      <td>149,598,262 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>4</th>\n",
+      "      <td>Length of Year:</td>\n",
+      "      <td>687 Earth days</td>\n",
+      "      <td>365.24 days</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>5</th>\n",
+      "      <td>Temperature:</td>\n",
+      "      <td>-87 to -5 °C</td>\n",
+      "      <td>-88 to 58°C</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact_table.replace('\\n','')\n",
+    "print(fact_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Mars Hemispheres</h3>\n",
+    "\n",
+    "- Save both the image url string for the full resolution hemisphere image, and the Hemisphere title containing the hemisphere name. Use a Python dictionary to store the data using the keys img_url and title.\n",
+    "\n",
+    "- Append the dictionary with the image url string and the hemisphere title to a list. This list will contain one dictionary for each hemisphere."
    ]
   },
   {
