--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "5            Temperature:     -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars - Earth Comparison</th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -369,6 +369,112 @@
     "- Save both the image url string for the full resolution hemisphere image, and the Hemisphere title containing the hemisphere name. Use a Python dictionary to store the data using the keys img_url and title.\n",
     "\n",
     "- Append the dictionary with the image url string and the hemisphere title to a list. This list will contain one dictionary for each hemisphere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##SCRAPE MARS HEMISPHERE##\n",
+    "mars_hem_url = 'https://marshemispheres.com/'\n",
+    "browser.visit(mars_hem_url)\n",
+    "html = browser.html\n",
+    "soup = bs(html,'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars_hems = soup.find('div',class_='collapsible results')\n",
+    "mars_item = mars_hems.find_all('div',class_='item')\n",
+    "hemisphere_image_urls = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "Cerberus Hemisphere Enhanced\n",
+      "https://marshemispheres.com/cerberus.html\n",
+      "--------------------------------------------------\n",
+      "Schiaparelli Hemisphere Enhanced\n",
+      "https://marshemispheres.com/schiaparelli.html\n",
+      "--------------------------------------------------\n",
+      "Syrtis Major Hemisphere Enhanced\n",
+      "https://marshemispheres.com/syrtis.html\n",
+      "--------------------------------------------------\n",
+      "Valles Marineris Hemisphere Enhanced\n",
+      "https://marshemispheres.com/valles.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in mars_item:\n",
+    "    try:\n",
+    "        ##TITLE##\n",
+    "        hem = item.find('div',class_ = 'description')\n",
+    "        title = hem.h3.text\n",
+    "        \n",
+    "        ##IMAGE URL##\n",
+    "        hem_url = hem.a['href']\n",
+    "        browser.visit(mars_hem_url + hem_url)\n",
+    "        html = browser.html\n",
+    "        soup = bs(html,'html.parser')\n",
+    "        image_src = soup.find('li').a['href']\n",
+    "        img_url = mars_hem_url + hem_url\n",
+    "        if (title and image_src):\n",
+    "            # Print results\n",
+    "            print('-'*50)\n",
+    "            print(title)\n",
+    "            print(img_url)\n",
+    "        \n",
+    "        ##CREATE DICTIONARY##\n",
+    "        hem_dict = {\n",
+    "            'title':title,\n",
+    "            'image_url':img_url\n",
+    "        }\n",
+    "        hemisphere_image_urls.append(hem_dict)\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'image_url': 'https://marshemispheres.com/cerberus.html'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'image_url': 'https://marshemispheres.com/schiaparelli.html'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'image_url': 'https://marshemispheres.com/syrtis.html'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'image_url': 'https://marshemispheres.com/valles.html'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls"
    ]
   },
   {
