--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,91 +2,108 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h1>Web Scraping Challenge</h1>\n",
     "\n",
     "<h2>Step 1 - Scraping</h2>\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
    "source": [
-    "from bs4 import BeautifulSoup as bs\n",
-    "import requests\n",
-    "import pymongo\n",
-    "from splinter import Browser\n",
-    "from selenium import webdriver\n",
-    "from flask import Flask, render_template, redirect\n",
-    "from flask_pymongo import PyMongo\n",
-    "import pandas as pd"
-   ]
+    "import pandas as pd \r\n",
+    "from bs4 import BeautifulSoup as bs\r\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\r\n",
+    "from selenium import webdriver\r\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\r\n",
+    "import nbconvert\r\n",
+    "import requests\r\n",
+    "import time\r\n",
+    "from splinter import Browser\r\n",
+    "import json"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "source": [
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\r\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 92.0.4515\n",
+      "Get LATEST driver version for 92.0.4515\n",
+      "There is no [win32] chromedriver for browser 92.0.4515 in cache\n",
+      "Get LATEST driver version for 92.0.4515\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/92.0.4515.107/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\Annika\\.wdm\\drivers\\chromedriver\\win32\\92.0.4515.107]\n"
+     ]
+    }
+   ],
    "metadata": {
     "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "executable_path = {'executable_path': 'chromedriver.exe'}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h3>Nasa Mars News</h3>\n",
     "\n",
     "- Scrape the Mars News Site and collect the latest News Title and Paragraph Text. Assign the text to variables that you can reference later."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
    "source": [
-    "##PAGE TO BE SCRAPED##\n",
-    "news_url = 'https://mars.nasa.gov/news/'\n",
-    "browser.visit(news_url)\n",
-    "html = browser.html\n",
+    "##PAGE TO BE SCRAPED##\r\n",
+    "news_url = 'https://mars.nasa.gov/news/'\r\n",
+    "browser.visit(news_url)\r\n",
+    "html = browser.html\r\n",
     "news_soup = bs(html,'html.parser')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 9,
+   "source": [
+    "##COLLECT THE LATEST NEWS TITLE AND PARAGRAPH TEXT##\r\n",
+    "news_title = news_soup.find_all('div', class_='content_title')[0].text\r\n",
+    "news_body = news_soup.find_all('div', class_='article_teaser_body')[0].text\r\n",
+    "\r\n",
+    "print(news_title)\r\n",
+    "print(\"----------\")\r\n",
+    "print(news_body)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Mars Now\n",
       "----------\n",
-      "The six-wheeled scientist is heading south to explore Jezero Crater’s lakebed in search of signs of ancient microbial life.\n"
+      "The rover will abrade a rock this week, allowing scientists and engineers to decide whether that target would withstand its powerful drill.\n"
      ]
     }
    ],
-   "source": [
-    "##COLLECT THE LATEST NEWS TITLE AND PARAGRAPH TEXT##\n",
-    "news_title = news_soup.find_all('div', class_='content_title')[0].text\n",
-    "news_body = news_soup.find_all('div', class_='article_teaser_body')[0].text\n",
-    "\n",
-    "print(news_title)\n",
-    "print(\"----------\")\n",
-    "print(news_body)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h3>JPL Mars Space Images</h3>\n",
     "\n",
@@ -95,24 +112,12 @@
     "- Make sure to find the image url to the full size .jpg image.\n",
     "\n",
     "- Make sure to save a complete url string for this image."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 10,
    "source": [
     "def featured():\n",
     "    url = \"https://spaceimages-mars.com\"\n",
@@ -127,25 +132,43 @@
     "    return(featured_img_url)\n",
     "\n",
     "featured()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h3>Mars Facts</h3>\n",
     "\n",
     "- Visit the Mars Facts webpage here and use Pandas to scrape the table containing facts about the planet including Diameter, Mass, etc.\n",
     "\n",
     "- Use Pandas to convert the data to a HTML table string."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 11,
+   "source": [
+    "url = 'https://galaxyfacts-mars.com/'\n",
+    "tables = pd.read_html(url)\n",
+    "tables"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[                         0                1                2\n",
@@ -168,24 +191,35 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
-   "source": [
-    "url = 'https://galaxyfacts-mars.com/'\n",
-    "tables = pd.read_html(url)\n",
-    "tables"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 12,
+   "source": [
+    "mars_fact = tables[0]\n",
+    "mars_fact.columns = mars_fact.iloc[0]\n",
+    "mars_fact = mars_fact.reindex(mars_fact.index.drop(0)).reset_index(drop=True)\n",
+    "mars_fact.columns.name = None\n",
+    "mars_fact"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "  Mars - Earth Comparison             Mars            Earth\n",
+       "0               Diameter:         6,779 km        12,742 km\n",
+       "1                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "2                  Moons:                2                1\n",
+       "3      Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       "4         Length of Year:   687 Earth days      365.24 days\n",
+       "5            Temperature:     -87 to -5 °C      -88 to 58°C"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -250,59 +284,46 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "  Mars - Earth Comparison             Mars            Earth\n",
-       "0               Diameter:         6,779 km        12,742 km\n",
-       "1                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
-       "2                  Moons:                2                1\n",
-       "3      Distance from Sun:   227,943,824 km   149,598,262 km\n",
-       "4         Length of Year:   687 Earth days      365.24 days\n",
-       "5            Temperature:     -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
-   "source": [
-    "mars_fact = tables[0]\n",
-    "mars_fact.columns = mars_fact.iloc[0]\n",
-    "mars_fact = mars_fact.reindex(mars_fact.index.drop(0)).reset_index(drop=True)\n",
-    "mars_fact.columns.name = None\n",
-    "mars_fact"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 13,
+   "source": [
+    "fact_table = mars_fact.to_html()\n",
+    "fact_table"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars - Earth Comparison</th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
-   "source": [
-    "fact_table = mars_fact.to_html()\n",
-    "fact_table"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 14,
+   "source": [
+    "fact_table.replace('\\n','')\n",
+    "print(fact_table)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "<table border=\"1\" class=\"dataframe\">\n",
       "  <thead>\n",
@@ -355,70 +376,46 @@
      ]
     }
    ],
-   "source": [
-    "fact_table.replace('\\n','')\n",
-    "print(fact_table)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<h3>Mars Hemispheres</h3>\n",
     "\n",
     "- Save both the image url string for the full resolution hemisphere image, and the Hemisphere title containing the hemisphere name. Use a Python dictionary to store the data using the keys img_url and title.\n",
     "\n",
     "- Append the dictionary with the image url string and the hemisphere title to a list. This list will contain one dictionary for each hemisphere."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
    "source": [
     "##SCRAPE MARS HEMISPHERE##\n",
     "mars_hem_url = 'https://marshemispheres.com/'\n",
     "browser.visit(mars_hem_url)\n",
     "html = browser.html\n",
     "soup = bs(html,'html.parser')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
    "source": [
     "mars_hems = soup.find('div',class_='collapsible results')\n",
     "mars_item = mars_hems.find_all('div',class_='item')\n",
     "hemisphere_image_urls = []"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------\n",
-      "Cerberus Hemisphere Enhanced\n",
-      "https://marshemispheres.com/cerberus.html\n",
-      "--------------------------------------------------\n",
-      "Schiaparelli Hemisphere Enhanced\n",
-      "https://marshemispheres.com/schiaparelli.html\n",
-      "--------------------------------------------------\n",
-      "Syrtis Major Hemisphere Enhanced\n",
-      "https://marshemispheres.com/syrtis.html\n",
-      "--------------------------------------------------\n",
-      "Valles Marineris Hemisphere Enhanced\n",
-      "https://marshemispheres.com/valles.html\n"
-     ]
-    }
-   ],
+   "execution_count": 17,
    "source": [
     "for item in mars_item:\n",
     "    try:\n",
@@ -448,14 +445,38 @@
     "        \n",
     "    except Exception as e:\n",
     "        print(e)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "--------------------------------------------------\n",
+      "Cerberus Hemisphere Enhanced\n",
+      "https://marshemispheres.com/cerberus.html\n",
+      "--------------------------------------------------\n",
+      "Schiaparelli Hemisphere Enhanced\n",
+      "https://marshemispheres.com/schiaparelli.html\n",
+      "--------------------------------------------------\n",
+      "Syrtis Major Hemisphere Enhanced\n",
+      "https://marshemispheres.com/syrtis.html\n",
+      "--------------------------------------------------\n",
+      "Valles Marineris Hemisphere Enhanced\n",
+      "https://marshemispheres.com/valles.html\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 18,
+   "source": [
+    "hemisphere_image_urls"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[{'title': 'Cerberus Hemisphere Enhanced',\n",
@@ -468,21 +489,71 @@
        "  'image_url': 'https://marshemispheres.com/valles.html'}]"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 18
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "source": [
-    "hemisphere_image_urls"
-   ]
+    "def scrape():\n",
+    "    data = {\"Title & Paragraph\":news_body,\n",
+    "            \"Feautured Image\":featured(),\n",
+    "            \"Mars Facts\": fact_table,\n",
+    "            \"Hemispheres\":hemisphere_image_urls}\n",
+    "    return(data)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "scrape()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Title & Paragraph': 'The rover will abrade a rock this week, allowing scientists and engineers to decide whether that target would withstand its powerful drill.',\n",
+       " 'Feautured Image': 'https://spaceimages-mars.com/image/featured/mars3.jpg',\n",
+       " 'Mars Facts': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars - Earth Comparison</th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
+       " 'Hemispheres': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/cerberus.html'},\n",
+       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/schiaparelli.html'},\n",
+       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/syrtis.html'},\n",
+       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/valles.html'}]}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "browser.quit()"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
